recipes/prometheus-community/kube-prometheus-stack/86.1.0/CATALOG.md
<!-- Generated by npm run catalog:maps. Do not edit by hand. -->

# prometheus-community/kube-prometheus-stack 86.1.0 Catalog Map

This page makes the artifact chain explicit:

```text
chart -> recipe -> variants -> variant revisions -> package bases -> receipts
```

## Status

| Field | Value |
| --- | --- |
| Chart | prometheus-community/kube-prometheus-stack@86.1.0 |
| Catalog status | catalog-candidate |
| Support level | promotion-review-needed |
| Supported scopes | none |
| Production readiness | not-reviewed-for-production |
| Supported variants | none |
| Candidate variants | default, no-crds |
| Control points | admission-webhook, capability-profile, cluster-rbac, crd-policy, dependency-lock, generated-facts, installer-support-object, source-lock, tpl |

## Feature And Proof Summary

This is the chart-level summary. Use the variant table and receipt links below
for exact base-variant evidence.

| Field | Value |
| --- | --- |
| Adoption bucket | - |
| User status | - |
| Strongest evidence | - |
| Proof lanes | render parity 2/2; ConfigHub 2/2; local live 2/2; GitOps live 2/2; live parity 2/2 |
| Feature summary | none-recorded |
| Hard gap | - |
| Next action | - |

## Artifact Chain

| Stage | Artifact |
| --- | --- |
| Source chart lock | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/source-lock.yaml](source-lock.yaml) |
| Dependency lock | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/dependency-lock.yaml](dependency-lock.yaml) |
| Recipe | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/recipe.yaml](recipe.yaml) |
| Helm plan | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/helm-plan.yaml](helm-plan.yaml) |
| Chart dossier | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/chart-dossier.yaml](chart-dossier.yaml) |
| Control points | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/control-points.yaml](control-points.yaml) |
| Value model | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/value-model.yaml](value-model.yaml) |
| Production readiness plan | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/production-readiness-plan.yaml](production-readiness-plan.yaml) |
| Catalog status | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/catalog-status.yaml](catalog-status.yaml) |
| Helm pain report | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/helm-pain-report.yaml](helm-pain-report.yaml) |
| Installer package OCI | `oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/prometheus-community-kube-prometheus-stack:86.1.0@sha256:9810de65b598e14ab7eb8fe1d6fc12602c3f81bd991f21b8dfe0d6e15063881f` |
| Installer package source | [packages/prometheus-community/kube-prometheus-stack/86.1.0](../../../../packages/prometheus-community/kube-prometheus-stack/86.1.0) |
| Installer package receipt | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/publication/installer-package-receipt.yaml](publication/installer-package-receipt.yaml) |
| Machine index | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/artifact-index.yaml](artifact-index.yaml) |

## Variants

| Variant | Variant file | Package base | Revision | Helm objects | cub installer objects | Match | Helm equivalence | Scan | Gate | Target facts |
| --- | --- | --- | --- | --- | --- | --- | --- | --- | --- | --- |
| default | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/variants/default/variant.yaml](variants/default/variant.yaml) | [packages/prometheus-community/kube-prometheus-stack/86.1.0/bases/default](../../../../packages/prometheus-community/kube-prometheus-stack/86.1.0/bases/default) | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/revisions/default/r001/variant-revision.yaml](revisions/default/r001/variant-revision.yaml) | 124 | 125 | 124/124 | pass | warn | warn | required Secret monitoring/kube-prometheus-stack-admission keys ca,cert,key; required CRD alertmanagerconfigs.monitoring.coreos.com; required CRD alertmanagers.monitoring.coreos.com; required CRD podmonitors.monitoring.coreos.com; required CRD probes.monitoring.coreos.com; required CRD prometheusagents.monitoring.coreos.com; required CRD prometheuses.monitoring.coreos.com; required CRD prometheusrules.monitoring.coreos.com; required CRD scrapeconfigs.monitoring.coreos.com; required CRD servicemonitors.monitoring.coreos.com; required CRD thanosrulers.monitoring.coreos.com |
| no-crds | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/variants/no-crds/variant.yaml](variants/no-crds/variant.yaml) | [packages/prometheus-community/kube-prometheus-stack/86.1.0/bases/no-crds](../../../../packages/prometheus-community/kube-prometheus-stack/86.1.0/bases/no-crds) | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/revisions/no-crds/r001/variant-revision.yaml](revisions/no-crds/r001/variant-revision.yaml) | 114 | 115 | 114/114 | pass | warn | warn | required Secret monitoring/kube-prometheus-stack-admission keys ca,cert,key; required CRD alertmanagerconfigs.monitoring.coreos.com; required CRD alertmanagers.monitoring.coreos.com; required CRD podmonitors.monitoring.coreos.com; required CRD probes.monitoring.coreos.com; required CRD prometheusagents.monitoring.coreos.com; required CRD prometheuses.monitoring.coreos.com; required CRD prometheusrules.monitoring.coreos.com; required CRD scrapeconfigs.monitoring.coreos.com; required CRD servicemonitors.monitoring.coreos.com; required CRD thanosrulers.monitoring.coreos.com |

## Package Bases

| Base | Path | Default | Description |
| --- | --- | --- | --- |
| default | [packages/prometheus-community/kube-prometheus-stack/86.1.0/bases/default](../../../../packages/prometheus-community/kube-prometheus-stack/86.1.0/bases/default) | yes | kube-prometheus-stack default with Grafana password bound variant rendered from prometheus-community/kube-prometheus-stack@86.1.0 |
| no-crds | [packages/prometheus-community/kube-prometheus-stack/86.1.0/bases/no-crds](../../../../packages/prometheus-community/kube-prometheus-stack/86.1.0/bases/no-crds) | no | kube-prometheus-stack CRDs disabled variant rendered from prometheus-community/kube-prometheus-stack@86.1.0 |

## Receipts

| Variant | Revision | Receipt | Kind | Result | Path |
| --- | --- | --- | --- | --- | --- |
| default | r001 | render | RenderReceipt | recorded | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/revisions/default/r001/receipts/render-receipt.yaml](revisions/default/r001/receipts/render-receipt.yaml) |
| default | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/revisions/default/r001/receipts/helm-equivalence-receipt.yaml](revisions/default/r001/receipts/helm-equivalence-receipt.yaml) |
| default | r001 | scan | ScanReceipt | warn | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/revisions/default/r001/receipts/scan-receipt.yaml](revisions/default/r001/receipts/scan-receipt.yaml) |
| default | r001 | installGate | InstallGate | warn | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/revisions/default/r001/receipts/install-gate.yaml](revisions/default/r001/receipts/install-gate.yaml) |
| no-crds | r001 | render | RenderReceipt | recorded | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/revisions/no-crds/r001/receipts/render-receipt.yaml](revisions/no-crds/r001/receipts/render-receipt.yaml) |
| no-crds | r001 | helmEquivalence | HelmEquivalenceReceipt | pass | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/revisions/no-crds/r001/receipts/helm-equivalence-receipt.yaml](revisions/no-crds/r001/receipts/helm-equivalence-receipt.yaml) |
| no-crds | r001 | scan | ScanReceipt | warn | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/revisions/no-crds/r001/receipts/scan-receipt.yaml](revisions/no-crds/r001/receipts/scan-receipt.yaml) |
| no-crds | r001 | installGate | InstallGate | warn | [recipes/prometheus-community/kube-prometheus-stack/86.1.0/revisions/no-crds/r001/receipts/install-gate.yaml](revisions/no-crds/r001/receipts/install-gate.yaml) |

## Current Install Shape

```sh
cub installer setup --pull oci://europe-west1-docker.pkg.dev/nth-fort-499605-q5/helm-expt/prometheus-community-kube-prometheus-stack:86.1.0@sha256:9810de65b598e14ab7eb8fe1d6fc12602c3f81bd991f21b8dfe0d6e15063881f --base <variant> --work-dir <tmp> --non-interactive --namespace <namespace>
```

Use the variant table above to choose the package base. The `oci://` ref is
the public package users pull; the `packages/...` path is the repo source path
used by maintainers and proof scripts. The proof path compares regular Helm
output with real `cub installer setup` output and explains every intentional
difference, such as the Namespace support object or separated Secrets.
